LU-17414 lnet: Use POSIX error number for libnetconfig

Currently liblnetconfig.c is returning custom define
LUSTRE_CFG_RC_* numbers which can be confusing to users.
This patch redefines LUSTRE_CFG_RC_* to use POSIX
error number to be consistent.

Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: I585d1dfd80d07160e5cdeef784920414132bcaf8
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53657
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>